--- a/index.html
+++ b/index.html
@@ -16,30 +16,32 @@
 </head>
 
 <body>
-  <header>
-    <div class="container">
-      <div class="header-container">
-        <div class="logo">Gab Tonini</div>
-        <nav>
-          <ul>
-            <li>
-              <a href="#">Home</a>
-            </li>
-            <li>
-              <a href="#">Services</a>
-            </li>
-            <li>
-              <a href="#">About</a>
-            </li>
-            <li>
-              <a href="#">Contact</a>
-            </li>
-          </ul>
-        </nav>
-        <button class="menu-button" onclick="openMenu()">
-          <img src="assets/icons/menu.svg" />
-        </button>
-      </div>
+  <header class="container section-background">
+    <div class="header-container">
+      <div class="logo">Gab Tonini</div>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">Services</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <button class="menu-button" onclick="openMenu()">
+        <img src="./assets/icons/menu-light.svg" />
+      </button>
+    </div>
+    <div class="header-content">
+      <h1>Bringing your ideas to life</h1>
+      <img class="header-arrow" src="./assets/icons/down-arrow.svg" alt="Ícone de uma seta apontando para baixo" />
     </div>
   </header>
 
