--- a/index.html
+++ b/index.html
@@ -1,24 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gab Tonini | HOME</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/index.css" />
+    <script type="text/javascript" src="./assets/scripts.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gab Tonini | HOME</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="assets/index.css" />
-  <script type="text/javascript" src="./assets/scripts.js"></script>
-</head>
+  <body>
+    <header class="container section-background">
+      <div class="header-container">
+        <div class="logo">Gab Tonini</div>
+        <nav>
+          <ul>
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">Services</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="menu-button" onclick="openMenu()">
+          <img src="./assets/icons/menu-light.svg" />
+        </button>
+      </div>
+      <div class="header-content">
+        <h1>Bringing your ideas to life</h1>
+        <img
+          class="header-arrow"
+          src="./assets/icons/down-arrow.svg"
+          alt="Ícone de uma seta apontando para baixo"
+        />
+      </div>
+    </header>
 
-<body>
-  <header class="container section-background">
-    <div class="header-container">
-      <div class="logo">Gab Tonini</div>
+    <div id="mobile-menu" class="container">
+      <div class="mobile-menu-header">
+        <button onclick="closeMenu()">
+          <img src="assets/icons/close.svg" />
+        </button>
+      </div>
       <nav>
         <ul>
           <li>
@@ -35,60 +71,35 @@
           </li>
         </ul>
       </nav>
-      <button class="menu-button" onclick="openMenu()">
-        <img src="./assets/icons/menu-light.svg" />
-      </button>
     </div>
-    <div class="header-content">
-      <h1>Bringing your ideas to life</h1>
-      <img class="header-arrow" src="./assets/icons/down-arrow.svg" alt="Ícone de uma seta apontando para baixo" />
-    </div>
-  </header>
 
-  <div id="mobile-menu" class="container">
-    <div class="mobile-menu-header">
-      <button onclick="closeMenu()">
-        <img src="assets/icons/close.svg" />
-      </button>
-    </div>
-    <nav>
-      <ul>
-        <li>
-          <a href="#">Home</a>
-        </li>
-        <li>
-          <a href="#">Services</a>
-        </li>
-        <li>
-          <a href="#">About</a>
-        </li>
-        <li>
-          <a href="#">Contact</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
+    <section>
+      <div class="container">
+        <h2 class="section-title">Section 🍖</h2>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
+        odit.
+      </div>
+    </section>
 
-  <section>
-    <div class="container">
-      <h2 class="section-title">Section 🍖</h2>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
-      odit.
-    </div>
-  </section>
+    <section>
+      <div class="container">
+        <h2 class="section-title">Section 🍙</h2>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto
+        cumque odit ullam illum harum earum nihil aliquam at inventore placeat!
+      </div>
+    </section>
 
-  <section>
-    <div class="container">
-      <h2 class="section-title">Section 🍙</h2>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto
-      cumque odit ullam illum harum earum nihil aliquam at inventore placeat!
-    </div>
-  </section>
+    <section>
+      <div class="container">
+        <h2 class="section-title">Section 💄</h2>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto
+        cumque odit ullam illum harum earum nihil aliquam at inventore placeat!
+      </div>
+    </section>
 
-  <footer class="container">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
-    expedita fugit sequi reprehenderit ab voluptas.
-  </footer>
-</body>
-
+    <footer class="container">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+      expedita fugit sequi reprehenderit ab voluptas.
+    </footer>
+  </body>
 </html>
