--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
       </div>
     </section>
 
-    <footer class="container">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
-      expedita fugit sequi reprehenderit ab voluptas.
+    <footer>
+      <div class="container footer-container">
+        <span> Copyright © 2023 | Gabriela Tonini </span>
+        <span> Made with 🖤 </span>
+      </div>
     </footer>
   </body>
 </html>
