descriçao da pagina

--- a/index.html
+++ b/index.html
@@ -75,6 +75,25 @@
 
     <section>
       <div class="container">
+        <div class="page-description-container">
+          <h2 class="page-title">
+            <img src="./assets/icons/title-icon.svg" /> <span>Work</span>
+          </h2>
+          <p class="page-description">
+            Over the past <span class="text-highlight">5 years</span>, I've been
+            fortunate to gain experience in various domains of Design, expanding
+            my skill set.
+          </p>
+          <p class="page-description-subtitle">
+            Focused on Experience Design, Branding, Visual Systems and Logo
+            Design.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
         <h2 class="section-title">Section 🍖</h2>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
         odit.
