--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <div class="header-content">
         <h1>Bringing your ideas to life</h1>
         <img
+          onclick="scrollToDescriptionSection()"
           class="header-arrow"
           src="./assets/icons/down-arrow.svg"
           alt="Ícone de uma seta apontando para baixo"
@@ -73,7 +74,7 @@
       </nav>
     </div>
 
-    <section>
+    <section id="description-section">
       <div class="container">
         <div class="page-description-container">
           <h2 class="page-title">
