--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="header-content">
         <h1>Bringing your ideas to life</h1>
         <img
-          onclick="scrollToDescriptionSection()"
+          onclick="scrollToInitialSection()"
           class="header-arrow"
           src="./assets/icons/down-arrow.svg"
           alt="Ícone de uma seta apontando para baixo"
@@ -74,13 +74,13 @@
       </nav>
     </div>
 
-    <section id="description-section">
+    <section id="initial-section">
       <div class="container">
         <div class="page-description-container">
-          <h2 class="page-title">
+          <h2 class="section-title">
             <img src="./assets/icons/title-icon.svg" /> <span>Work</span>
           </h2>
-          <p class="page-description">
+          <p class="section-description">
             Over the past <span class="text-highlight">5 years</span>, I've been
             fortunate to gain experience in various domains of Design, expanding
             my skill set.
@@ -95,25 +95,24 @@
 
     <section>
       <div class="container">
-        <h2 class="section-title">Section 🍖</h2>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
-        odit.
-      </div>
-    </section>
-
-    <section>
-      <div class="container">
-        <h2 class="section-title">Section 🍙</h2>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto
-        cumque odit ullam illum harum earum nihil aliquam at inventore placeat!
-      </div>
-    </section>
-
-    <section>
-      <div class="container">
-        <h2 class="section-title">Section 💄</h2>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto
-        cumque odit ullam illum harum earum nihil aliquam at inventore placeat!
+        <h2 class="section-title">
+          <img src="./assets/icons/title-icon.svg" /> <span>About Me</span>
+        </h2>
+        <p class="section-description">
+          As a Brazilian Designer currently based in Portugal, I am passionate
+          about arts and the vibrant creative realm.
+        </p>
+        <div class="grid-50-50 mt-2">
+          <div>
+            <img class="w-100" src="./assets/images/about-me-banner.png" />
+          </div>
+          <div class="vertical-align">
+            <p class="section-description">
+              Let's work together
+              <span class="text-highlight">to elevate</span> your project today
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
