seção contact me

--- a/index.html
+++ b/index.html
@@ -116,6 +116,31 @@
       </div>
     </section>
 
+    <section>
+      <div class="container mt-2">
+        <h2 class="section-title">
+          <img src="./assets/icons/title-icon.svg" /> <span>Contact Me</span>
+        </h2>
+        <div class="grid-50-50">
+          <div class="vertical-align">
+            <p class="section-description">
+              It's time to talk about your project
+            </p>
+          </div>
+          <div>
+            <div class="contact-info mb-1">
+              <span>Email</span>
+              <span>gabrielatonini08@gmail.com</span>
+            </div>
+            <div class="contact-info">
+              <span>Whatsapp</span>
+              <span>+351 933 375 469</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <div class="container footer-container">
         <span> Copyright © 2023 | Gabriela Tonini </span>
