--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <header class="container section-background">
+    <header class="container background-banner">
       <div class="header-container">
         <div class="logo">Gab Tonini</div>
         <nav>
@@ -90,6 +90,19 @@
             Design.
           </p>
         </div>
+      </div>
+    </section>
+
+    <section class="mb-2">
+      <div class="container background-banner pt-2 pb-2">
+        <h2 class="section-title color-white">
+          <img src="./assets/icons/title-icon-white.svg" />
+          <span>Services</span>
+        </h2>
+        <p class="section-description color-white">UI/UX Design</p>
+        <p class="section-description color-white">Graphic Design</p>
+        <p class="section-description color-white">Logo & Branding</p>
+        <p class="section-description color-white">Social Media</p>
       </div>
     </section>
 
