--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </div>
     </section>
 
-    <footer>
+    <footer class="background-banner">
       <div class="container footer-container">
         <span> Copyright © 2023 | Gabriela Tonini </span>
         <span> Made with 🖤 </span>
