--- a/index.html
+++ b/index.html
@@ -74,21 +74,58 @@
       </nav>
     </div>
 
-    <section id="initial-section">
+    <section id="initial-section" class="mb-2 pt-2">
       <div class="container">
-        <div class="page-description-container">
-          <h2 class="section-title">
-            <img src="./assets/icons/title-icon.svg" /> <span>Work</span>
-          </h2>
+        <h2 class="section-title">
+          <img src="./assets/icons/title-icon.svg" /> <span>Work</span>
+        </h2>
+        <div class="section-content">
           <p class="section-description">
             Over the past <span class="text-highlight">5 years</span>, I've been
             fortunate to gain experience in various domains of Design, expanding
             my skill set.
           </p>
-          <p class="page-description-subtitle">
+          <p class="page-sub-description mt-1">
             Focused on Experience Design, Branding, Visual Systems and Logo
             Design.
           </p>
+        </div>
+
+        <div class="divider"></div>
+      </div>
+
+      <div class="container">
+        <h2 class="restaura-jeans-title">
+          <span>
+            Restaura <br />
+            Jeans
+            <img src="./assets/icons/link-arrow.png" />
+          </span>
+        </h2>
+        <p class="page-sub-description mt-1 mb-2">
+          The Restaura Jeans WebApp provides a tailored experience by analyzing
+          a user's skin tone, hair, eyes, and preferences through a quick quiz,
+          ultimately delivering the perfect color pack.
+        </p>
+      </div>
+
+      <div class="restaura-jeans-banner"></div>
+
+      <div class="container mt-2">
+        <div class="responsive-grid-50-50">
+          <div class="work-card">
+            <img src="./assets/images/dental-speed.png" />
+            <a class="work-link"
+              >Dental Speed <img src="./assets/icons/link-arrow.png"
+            /></a>
+          </div>
+
+          <div class="work-card">
+            <img src="./assets/images/espaco-jasmin.png" />
+            <a class="work-link"
+              >Espaço Jasmin <img src="./assets/icons/link-arrow.png"
+            /></a>
+          </div>
         </div>
       </div>
     </section>
@@ -99,10 +136,23 @@
           <img src="./assets/icons/title-icon-white.svg" />
           <span>Services</span>
         </h2>
-        <p class="section-description color-white">UI/UX Design</p>
-        <p class="section-description color-white">Graphic Design</p>
-        <p class="section-description color-white">Logo & Branding</p>
-        <p class="section-description color-white">Social Media</p>
+
+        <div class="responsive-grid-50-50">
+          <div class="services-section-description color-white">
+            <p>UI/UX Design</p>
+            <p>Graphic Design</p>
+            <p>Logo & Branding</p>
+            <p>Social Media</p>
+          </div>
+          <div>
+            <a href="#">
+              <img
+                class="services-section-redirect-arrow"
+                src="./assets/icons/link-arrow-white.png"
+              />
+            </a>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -111,43 +161,48 @@
         <h2 class="section-title">
           <img src="./assets/icons/title-icon.svg" /> <span>About Me</span>
         </h2>
-        <p class="section-description">
-          As a Brazilian Designer currently based in Portugal, I am passionate
-          about arts and the vibrant creative realm.
-        </p>
-        <div class="grid-50-50 mt-2">
-          <div>
-            <img class="w-100" src="./assets/images/about-me-banner.png" />
-          </div>
-          <div class="vertical-align">
-            <p class="section-description">
-              Let's work together
-              <span class="text-highlight">to elevate</span> your project today
-            </p>
+        <div class="section-content">
+          <p class="section-description">
+            As a Brazilian Designer currently based in Portugal, I am passionate
+            about arts and the vibrant creative realm.
+          </p>
+          <div class="responsive-grid-50-50 mt-2">
+            <div>
+              <img class="w-100" src="./assets/images/about-me-banner.png" />
+            </div>
+            <div class="vertical-align">
+              <p class="section-description">
+                Let's work together
+                <span class="text-highlight">to elevate</span> your project
+                today
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <section>
-      <div class="container mt-2">
+      <div class="container">
         <h2 class="section-title">
           <img src="./assets/icons/title-icon.svg" /> <span>Contact Me</span>
         </h2>
-        <div class="grid-50-50">
-          <div class="vertical-align">
-            <p class="section-description">
-              It's time to talk about your project
-            </p>
-          </div>
-          <div>
-            <div class="contact-info mb-1">
-              <span>Email</span>
-              <span>gabrielatonini08@gmail.com</span>
+        <div class="section-content">
+          <div class="responsive-grid-50-50">
+            <div class="vertical-align">
+              <p class="section-description">
+                It's time to talk about your project
+              </p>
             </div>
-            <div class="contact-info">
-              <span>Whatsapp</span>
-              <span>+351 933 375 469</span>
+            <div>
+              <div class="contact-info mb-1">
+                <span>Email</span>
+                <span>gabrielatonini08@gmail.com</span>
+              </div>
+              <div class="contact-info">
+                <span>Whatsapp</span>
+                <span>+351 933 375 469</span>
+              </div>
             </div>
           </div>
         </div>
