--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
     <header class="background-banner">
       <div class="container">
         <div class="header-container">
-          <div class="logo">Gab Tonini</div>
+          <div class="logo"><a href="./index.html">Gab Tonini</a></div>
           <nav>
             <ul>
               <li>
-                <a href="#">Work</a>
+                <a href="./work.html">Work</a>
               </li>
               <li>
-                <a href="#">Services</a>
+                <a href="./service.html">Services</a>
               </li>
               <li>
-                <a href="#">About</a>
+                <a href="./about.html">About</a>
               </li>
               <li>
-                <a href="#">Contact</a>
+                <a href="./contact-me.html">Contact</a>
               </li>
             </ul>
           </nav>
@@ -77,16 +77,16 @@
       <nav>
         <ul>
           <li>
-            <a href="#">Home</a>
+            <a href="./work.html">Work</a>
           </li>
           <li>
-            <a href="#">Services</a>
+            <a href="./service.html">Services</a>
           </li>
           <li>
-            <a href="#">About</a>
+            <a href="./about.html">About</a>
           </li>
           <li>
-            <a href="#">Contact</a>
+            <a href="./contact-me.html">Contact</a>
           </li>
         </ul>
       </nav>
