titulos das paginas

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
     <section id="initial-section" class="mb-2 pt-2">
       <div class="container">
         <h2 class="section-title">
-          <img src="./assets/icons/title-icon.svg" /> <span>Work</span>
+          <img src="./assets/icons/title-icon.svg" /> <span>About</span>
         </h2>
         <div class="section-content">
           <p class="section-description">Bringing Ideas to Life:</p>
