correçoes dos links

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
       <div class="container">
         <div class="responsive-grid-50-50">
           <h2 class="restaura-jeans-title">
-            <span>
+            <a href="work.html">
               Restaura <br />
               Jeans
               <img src="./assets/icons/link-arrow.png" />
-            </span>
+            </a>
           </h2>
-          <p class="page-sub-description mt-1 mb-2">
+          <p class="page-sub-description mb-2">
             The Restaura Jeans WebApp provides a tailored experience by
             analyzing a user's skin tone, hair, eyes, and preferences through a
             quick quiz, ultimately delivering the perfect color pack.
@@ -135,14 +135,14 @@
         <div class="responsive-grid-50-50">
           <div class="work-card">
             <img src="./assets/images/dental-speed.png" />
-            <a class="work-link"
+            <a class="work-link" href="work.html"
               >Dental Speed <img src="./assets/icons/link-arrow.png"
             /></a>
           </div>
 
           <div class="work-card">
             <img src="./assets/images/espaco-jasmin.png" />
-            <a class="work-link"
+            <a class="work-link" href="work.html"
               >Espaço Jasmin <img src="./assets/icons/link-arrow.png"
             /></a>
           </div>
@@ -164,8 +164,8 @@
             <p>Logo & Branding</p>
             <p>Social Media</p>
           </div>
-          <div>
-            <a href="#">
+          <div class="services-section-redirect-arrow-container">
+            <a href="service.html">
               <img
                 class="services-section-redirect-arrow"
                 src="./assets/icons/link-arrow-white.png"
