--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         </h2>
         <div class="section-content">
           <div class="responsive-grid-50-50">
-            <div class="vertical-align">
+            <div>
               <p class="section-description color-primary">
                 It's time to talk about your project
               </p>
@@ -223,6 +223,28 @@
                 <span>Whatsapp</span>
                 <span>+351 933 375 469</span>
               </div>
+              <div class="divider"></div>
+
+              <ul class="contact-section-links">
+                <li>
+                  <a href="https://www.behance.net/Gbtonini" target="_blank">
+                    Behance <img src="./assets/icons/link-arrow.png" />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.instagram.com/gbtonini/" target="_blank">
+                    Instagram <img src="./assets/icons/link-arrow.png" />
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.linkedin.com/in/gbtonini/"
+                    target="_blank"
+                  >
+                    LinkedIn <img src="./assets/icons/link-arrow.png" />
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
