--- a/about.html
+++ b/about.html
@@ -93,18 +93,53 @@
 
     <section id="initial-section" class="mb-2 pt-2">
       <div class="container">
-        <h2 class="section-title">
-          <img src="./assets/icons/title-icon.svg" /> <span>About</span>
-        </h2>
-        <div class="section-content">
-          <p class="section-description">Bringing Ideas to Life:</p>
-          <p class="page-sub-description mt-1">
-            Focused on Experience Design, Branding, Visual Systems and Logo
-            Design.
-          </p>
+        <div class="experience-section">
+          <h2>Education</h2>
+          <div class="experience-section-item">
+            <h3>University of Lisbon</h3>
+            <div class="experience-section-item-tags">
+              <span> Night time </span>
+              <span> In-class </span>
+            </div>
+            <div class="experience-section-item-details">
+              Sep 2022 - PRESENT | Postgraduate Degree
+            </div>
+            <div class="experience-section-item-description">
+              Digital Experience Design
+            </div>
+          </div>
+
+          <div class="experience-section-item">
+            <h3>Fean</h3>
+            <div class="experience-section-item-tags">
+              <span> Night time </span>
+              <span> In-class </span>
+            </div>
+            <div class="experience-section-item-details">
+              Mar 2018 - Dec 2021 | Bachelor's degree
+            </div>
+            <div class="experience-section-item-description">
+              Digital Experience Design
+            </div>
+          </div>
         </div>
 
-        <div class="divider"></div>
+        <div class="experience-section">
+          <h2>Work Experience</h2>
+          <div class="experience-section-item">
+            <h3>Emotion Films</h3>
+            <div class="experience-section-item-tags">
+              <span> Full time </span>
+              <span> Hybrid </span>
+            </div>
+            <div class="experience-section-item-details">
+              Mar 2023 - Present · 2 mos
+            </div>
+            <div class="experience-section-item-description">
+              Graphic Designer
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
