estrutura para pagina de contato

--- a/contact-me.html
+++ b/contact-me.html
@@ -67,20 +67,33 @@
       </nav>
     </div>
 
-    <section id="initial-section" class="mb-2 pt-2">
+    <section>
       <div class="container">
         <h2 class="section-title">
           <img src="./assets/icons/title-icon.svg" /> <span>Contact</span>
         </h2>
-        <div class="section-content">
-          <p class="section-description">Bringing Ideas to Life:</p>
-          <p class="page-sub-description mt-1">
-            Focused on Experience Design, Branding, Visual Systems and Logo
-            Design.
-          </p>
+        <div class="responsive-grid-50-50">
+          <div>
+            <h3>Let's talk about it</h3>
+          </div>
+          <div>
+            <p>
+              Let's connect and build a meaningful professional relationship.
+              Drop me a line, and let's explore how we can support each other.
+            </p>
+          </div>
         </div>
-
-        <div class="divider"></div>
+        <form class="responsive-grid-50-50">
+          <div>
+            <input type="text" />
+            <input type="text" />
+            <input type="text" />
+          </div>
+          <div>
+            <textarea></textarea>
+            <button>Send Message</button>
+          </div>
+        </form>
       </div>
     </section>
 
