estrutura da pagina de works

--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
         <div class="responsive-grid-50-50">
           <div class="work-card">
             <img src="./assets/images/dental-speed.png" />
-            <a class="work-link" href="work.html"
+            <a class="default-link" href="work.html"
               >Dental Speed <img src="./assets/icons/link-arrow.png"
             /></a>
           </div>
 
           <div class="work-card">
             <img src="./assets/images/espaco-jasmin.png" />
-            <a class="work-link" href="work.html"
+            <a class="default-link" href="work.html"
               >Espaço Jasmin <img src="./assets/icons/link-arrow.png"
             /></a>
           </div>
@@ -227,17 +227,26 @@
 
               <ul class="contact-section-links">
                 <li>
-                  <a href="https://www.behance.net/Gbtonini" target="_blank">
+                  <a
+                    class="default-link"
+                    href="https://www.behance.net/Gbtonini"
+                    target="_blank"
+                  >
                     Behance <img src="./assets/icons/link-arrow.png" />
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/gbtonini/" target="_blank">
+                  <a
+                    class="default-link"
+                    href="https://www.instagram.com/gbtonini/"
+                    target="_blank"
+                  >
                     Instagram <img src="./assets/icons/link-arrow.png" />
                   </a>
                 </li>
                 <li>
                   <a
+                    class="default-link"
                     href="https://www.linkedin.com/in/gbtonini/"
                     target="_blank"
                   >
