--- a/work.html
+++ b/work.html
@@ -75,12 +75,27 @@
         <div class="section-content">
           <p class="section-description">Bringing Ideas to Life:</p>
           <p class="page-sub-description mt-1">
-            Focused on Experience Design, Branding, Visual Systems and Logo
-            Design.
+            A selection of <span class="text-highlight">Recent Work</span>
           </p>
         </div>
 
-        <div class="divider"></div>
+        <div class="responsive-grid-50-50">
+          <div>
+            <img class="w-100" src="assets/images/di-ginie.png" />
+          </div>
+          <div class="vertical-align">
+            <div>
+              <div class="mb-1">
+                <span class="tag">UX/UI Design</span>
+              </div>
+              <h3>
+                <a class="default-link">
+                  DiGinie <img src="./assets/icons/link-arrow.png" />
+                </a>
+              </h3>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -109,17 +124,26 @@
 
               <ul class="contact-section-links">
                 <li>
-                  <a href="https://www.behance.net/Gbtonini" target="_blank">
+                  <a
+                    class="default-link"
+                    href="https://www.behance.net/Gbtonini"
+                    target="_blank"
+                  >
                     Behance <img src="./assets/icons/link-arrow.png" />
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/gbtonini/" target="_blank">
+                  <a
+                    class="default-link"
+                    href="https://www.instagram.com/gbtonini/"
+                    target="_blank"
+                  >
                     Instagram <img src="./assets/icons/link-arrow.png" />
                   </a>
                 </li>
                 <li>
                   <a
+                    class="default-link"
                     href="https://www.linkedin.com/in/gbtonini/"
                     target="_blank"
                   >
