--- a/about.html
+++ b/about.html
@@ -206,17 +206,26 @@
 
               <ul class="contact-section-links">
                 <li>
-                  <a href="https://www.behance.net/Gbtonini" target="_blank">
+                  <a
+                    class="default-link"
+                    href="https://www.behance.net/Gbtonini"
+                    target="_blank"
+                  >
                     Behance <img src="./assets/icons/link-arrow.png" />
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/gbtonini/" target="_blank">
+                  <a
+                    class="default-link"
+                    href="https://www.instagram.com/gbtonini/"
+                    target="_blank"
+                  >
                     Instagram <img src="./assets/icons/link-arrow.png" />
                   </a>
                 </li>
                 <li>
                   <a
+                    class="default-link"
                     href="https://www.linkedin.com/in/gbtonini/"
                     target="_blank"
                   >
