--- a/work.html
+++ b/work.html
@@ -79,21 +79,67 @@
           </p>
         </div>
 
-        <div class="responsive-grid-50-50">
-          <div>
+        <div class="work-grid">
+          <div class="work-grid-tags">
+            <span class="tag">UX/UI Design</span>
+          </div>
+
+          <div class="work-grid-banner">
             <img class="w-100" src="assets/images/di-ginie.png" />
           </div>
-          <div class="vertical-align">
-            <div>
-              <div class="mb-1">
-                <span class="tag">UX/UI Design</span>
-              </div>
-              <h3>
-                <a class="default-link">
-                  DiGinie <img src="./assets/icons/link-arrow.png" />
-                </a>
-              </h3>
-            </div>
+
+          <div class="work-grid-title">
+            <a class="default-link" href="">
+              DiGinie <img src="./assets/icons/link-arrow.png" />
+            </a>
+          </div>
+        </div>
+
+        <div class="work-grid">
+          <div class="work-grid-tags">
+            <span class="tag">Social Media</span>
+          </div>
+
+          <div class="work-grid-banner">
+            <img class="w-100" src="assets/images/dental-speed.png" />
+          </div>
+
+          <div class="work-grid-title">
+            <a class="default-link" href="">
+              Dental Speed <img src="./assets/icons/link-arrow.png" />
+            </a>
+          </div>
+        </div>
+
+        <div class="work-grid">
+          <div class="work-grid-tags">
+            <span class="tag">Logo & Branding</span>
+          </div>
+
+          <div class="work-grid-banner">
+            <img class="w-100" src="assets/images/espaco-jasmin.png" />
+          </div>
+
+          <div class="work-grid-title">
+            <a class="default-link" href="">
+              Espaço Jasmin <img src="./assets/icons/link-arrow.png" />
+            </a>
+          </div>
+        </div>
+
+        <div class="work-grid">
+          <div class="work-grid-tags">
+            <span class="tag">Social Media</span>
+          </div>
+
+          <div class="work-grid-banner">
+            <img class="w-100" src="assets/images/liberta.png" />
+          </div>
+
+          <div class="work-grid-title">
+            <a class="default-link" href="">
+              Liberta <img src="./assets/icons/link-arrow.png" />
+            </a>
           </div>
         </div>
       </div>
