remoçao da pagina de services

--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
                 <a href="./work.html">Work</a>
               </li>
               <li>
-                <a href="./service.html">Services</a>
-              </li>
-              <li>
                 <a href="./about.html">About</a>
               </li>
               <li>
@@ -78,9 +75,6 @@
         <ul>
           <li>
             <a href="./work.html">Work</a>
-          </li>
-          <li>
-            <a href="./service.html">Services</a>
           </li>
           <li>
             <a href="./about.html">About</a>
@@ -165,7 +159,7 @@
             <p>Social Media</p>
           </div>
           <div class="services-section-redirect-arrow-container">
-            <a href="service.html">
+            <a target="_blank" href="https://www.behance.net/Gbtonini">
               <img
                 class="services-section-redirect-arrow"
                 src="./assets/icons/link-arrow-white.png"
